# learnfun-playfun

./: BUILD.md  CONTRIBUTING.md  FORMATS.md  autogen.sh  configure.ac
cc-lib/: arcfour.cc  arcfour.h  util.cc
tasbot/: README  TODO  playfun.cc  weighted-objectives.cc  weighted-objectives.h
tasbot/fceu/: cheat.cpp
